--- a/index.html
+++ b/index.html
@@ -1,101 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Web con efecto Parallax y menú horizontal fijo</title>
-	<style>
-		/* Estilos para el menú */
-		nav {
-			background-color: #333;
-			position: fixed;
-			top: 0;
-			left: 0;
-			width: 100%;
-			padding: 10px 0;
-		}
-		nav ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			display: flex;
-			justify-content: center;
-		}
-		nav li {
-			margin: 0 10px;
-		}
-		nav a {
-			color: #fff;
-			text-decoration: none;
-			font-size: 18px;
-			font-weight: bold;
-			text-transform: uppercase;
-			transition: all 0.3s ease-in-out;
-		}
-		nav a:hover {
-			color: #f00;
-		}
-
-		/* Estilos para el efecto Parallax */
-		.parallax {
-			background-image: url('https://i.imgur.com/sW8AkJN.jpg');
-			height: 500px;
-			background-attachment: fixed;
-			background-position: center;
-			background-repeat: no-repeat;
-			background-size: cover;
-			position: relative;
-		}
-		.parallax-content {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			color: #fff;
-			text-align: center;
-			font-size: 48px;
-			font-weight: bold;
-			text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-		}
-		.parallax-2 {
-			background-image: url('https://i.imgur.com/WOKF9Xy.jpg');
-			height: 500px;
-			background-attachment: fixed;
-			background-position: center;
-			background-repeat: no-repeat;
-			background-size: cover;
-			position: relative;
-		}
-		.parallax-content-2 {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			color: #fff;
-			text-align: center;
-			font-size: 48px;
-			font-weight: bold;
-			text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-		}
-	</style>
-</head>
-<body>
-	<nav>
-		<ul>
-			<li><a href="#">Inicio</a></li>
-			<li><a href="#">Servicios</a></li>
-			<li><a href="#">Productos</a></li>
-			<li><a href="#">Contacto</a></li>
-		</ul>
-	</nav>
-	<section class="parallax">
-		<div class="parallax-content">
-			<h1>Web con efecto Parallax y menú horizontal fijo</h1>
-		</div>
-	</section>
-	<section class="parallax-2">
-		<div class="parallax-content-2">
-			<h2>Más contenido con efecto Parallax</h2>
-		</div>
-	</section>
-</body>
-</html>
-
+<nav>
+    <div class="logo">LOGO</div>
+    <div class="barnav">
+    <div>item1</div>
+    <div>item2</div>
+    <div>item3</div>
+    <div>item4</div>
+    </div>
+    </nav>
+    <div class="contenido">
+    <p>Nulla facilisi. Aenean neque eros, maximus nec enim eu, dapibus tristique urna. Aenean malesuada orci sapien, eget posuere tortor ultricies sed. Nullam nec ante vel ex molestie laoreet vel ac purus. Aliquam condimentum, tortor eu condimentum elementum, quam ante dictum enim, id ultrices lacus ex ac ipsum. Praesent cursus, sapien at bibendum ultricies, elit elit rhoncus sem, ut luctus nisl odio at nulla. Cras magna tellus, pellentesque sed bibendum et, cursus eget massa. Quisque ante metus, accumsan a vulputate sed, luctus a orci. Praesent vel eros ac odio consequat tempus et ac justo. Fusce interdum sapien justo, id semper nisl euismod ac. Nulla quis lacus non ante facilisis auctor eu eu nisi. Nam id orci felis. Donec ac lacinia lacus. Nunc at euismod neque. Praesent vestibulum tellus sed purus porttitor, quis dictum arcu cursus. Mauris aliquet molestie velit sit amet dignissim.</p>
+    </div>
+  
