--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
-<nav>
-    <div class="logo">LOGO</div>
-    <div class="barnav">
-    <div>item1</div>
-    <div>item2</div>
-    <div>item3</div>
-    <div>item4</div>
-    </div>
+<!DOCTYPE htmL>
+ <html Lang="es">
+ <head>
+   <meta charset= "UTF-8">
+   <link rel="stylesheet" href="css/style.css">
+   <title>GABRIEL WEB</title>
+ </head>
+ <body>
+  <header>
+    <nav>
+     <h1>LOGO</h1>
+          <ul>
+            <li><a href="#" >INCI</a></li>
+           <li><a href="#" >CONTACTOS</a></li>
+           <li><a href="#">SOBRE MI</a></li>
+           <li><a href="#">PORTAFOLIO</ax/li>
+          </ul>
     </nav>
-    <div class="contenido">
-    <p>Nulla facilisi. Aenean neque eros, maximus nec enim eu, dapibus tristique urna. Aenean malesuada orci sapien, eget posuere tortor ultricies sed. Nullam nec ante vel ex molestie laoreet vel ac purus. Aliquam condimentum, tortor eu condimentum elementum, quam ante dictum enim, id ultrices lacus ex ac ipsum. Praesent cursus, sapien at bibendum ultricies, elit elit rhoncus sem, ut luctus nisl odio at nulla. Cras magna tellus, pellentesque sed bibendum et, cursus eget massa. Quisque ante metus, accumsan a vulputate sed, luctus a orci. Praesent vel eros ac odio consequat tempus et ac justo. Fusce interdum sapien justo, id semper nisl euismod ac. Nulla quis lacus non ante facilisis auctor eu eu nisi. Nam id orci felis. Donec ac lacinia lacus. Nunc at euismod neque. Praesent vestibulum tellus sed purus porttitor, quis dictum arcu cursus. Mauris aliquet molestie velit sit amet dignissim.</p>
-    </div>
-  
+  </header>
+ </body>
+ <html>
+
+
