--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
    <meta charset= "UTF-8">
    <link rel="stylesheet" href="css/style.css">
-   <title>GABRIEL WEB</title>
+   <title>BERNAT WEB</title>
  </head>
  <body>
   <header>
@@ -11,9 +11,10 @@
      <h1>LOGO</h1>
           <ul>
             <li><a href="#" >INCI</a></li>
-           <li><a href="#" >CONTACTOS</a></li>
+           <li><a href="#" >CONTACTES</a></li>
            <li><a href="#">SOBRE MI</a></li>
-           <li><a href="#">PORTAFOLIO</ax/li>
+           <li><a href="#">HORARIS</ax/li>
+            <h2>abdu</h2>
           </ul>
     </nav>
   </header>
