--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE htmL>
- <html Lang="es">
- <head>
-   <meta charset= "UTF-8">
-   <link rel="stylesheet" href="css/style.css">
-   <title>BERNAT WEB</title>
- </head>
- <body>
+<html Lang="es">
+<head>
+  <meta charset= "UTF-8">
+  <link rel="stylesheet" href="css/style.css">
+  <title>BERNAT WEB</title>
+</head>
+<body>
   <header>
     <nav>
-     <h1>LOGO</h1>
-          <ul>
-            <li><a href="#" >INCI</a></li>
-           <li><a href="#" >CONTACTES</a></li>
-           <li><a href="#">SOBRE MI</a></li>
-           <li><a href="#">HORARIS</ax/li>
-            <h2>abdu</h2>
-          </ul>
+      <h1>LOGO</h1>
+      <ul>
+        <li><a href="#">INICI</a></li>
+        <li><a href="#">CONTACTES</a></li>
+        <li><a href="#">SOBRE MI</a></li>
+        <li>
+          <a href="#">HORARIS</a>
+          <h2>abdu</h2>
+        </li>
+      </ul>
     </nav>
   </header>
- </body>
- <html>
+</body>
+<html>
 
 
