--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
         <li><a href="#">SOBRE MI</a></li>
         <li>
           <a href="#">HORARIS</a>
-          <h2>abdu</h2>
         </li>
       </ul>
     </nav>
   </header>
+  <p id="horaris-text">quelcom jeparut</p>
+  
+  <script>
+    function mostrarHoraris() {
+      // Obtiene el elemento <p> por su ID
+      var horarisText = document.getElementById("horaris-text");
+      // Muestra el elemento <p>
+      horarisText.style.display = "block";
+    }
+  </script>
 </body>
 <html>
-
 
