--- a/index.html
+++ b/index.html
@@ -54,30 +54,13 @@
 
 	<div id="background">
 		<div id="content">
-			<h1>Parallax Effect</h1>
+			<h1>Efeceta Parallax </h1>
 		</div>
 	</div>
 
 	<div id="section1">
 		<h2>Section 1</h2>
 	</div>
-
-	<div id="section2">
-		<h2>Section 2</h2>
-	</div>
-
-	<div id="section3">
-		<h2>Section 3</h2>
-	</div>
-
-	<div id="section4">
-		<h2>Section 4</h2>
-	</div>
-
-	<div id="section5">
-		<h2>Section 5</h2>
-	</div>
-
 </body>
 </html>
 
