--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		}
 
 		#section1 {
+            background-image: url(https://s1.eestatic.com/2022/03/23/actualidad/659444466_222930818_864x486.jpg);
 			height: 100vh;
 			background-color: #cccccc;
 			background-attachment: fixed;
