--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		}
 
 		#section1 {
-            background-image: url(https://s1.eestatic.com/2022/03/23/actualidad/659444466_222930818_864x486.jpg);
+            
 			height: 100vh;
 			background-color: #cccccc;
 			background-attachment: fixed;
@@ -60,7 +60,7 @@
 	</div>
 
 	<div id="section1">
-		<h2>Section 1</h2>
+		<h2>TAULA</h2>
 	</div>
 </body>
 </html>
