--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			text-shadow: 2px 2px black;
 		}
 
-		#section1 {
+		#seccio1 {
             
 			height: 100vh;
 			background-color: #cccccc;
@@ -59,7 +59,7 @@
 		</div>
 	</div>
 
-	<div id="section1">
+	<div id="seccio1">
 		<h2>TAULA</h2>
 	</div>
 </body>
