--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 			text-align: center;
 			padding: 50px 0;
 			text-shadow: 2px 2px black;
+
+            
 		}
 	</style>
 </head>
@@ -61,6 +63,22 @@
 
 	<div id="seccio1">
 		<h2>TAULA</h2>
+
+    <table>
+      <tr>
+<td>Nom</td>
+<td>Edat</td>
+<td>Ciutat</td>
+      </tr>
+      <tr>
+<td>Joan</td>
+<td>53</td>
+<td>Vic</td>
+
+
+      </tr>
+    
+    </table>
 	</div>
 </body>
 </html>
