--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 </head>
 <body>
 
+    <header>
+<nav>
+<h1>INS TARADELL</h1>
+<ul>
+
+<li><a href="#">INICI</a></li>
+<li><a href="#">SOBRE MI</a></li>
+<li><a href="#">CONTACTE</a></li>
+<li><a href="#">QUELCOM</a></li>
+
+
+</ul>
+
+
+</nav>
+
+    </header>
+
 	<div id="background">
 		<div id="content">
 			<h1>Efeceta Parallax </h1>
