--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
     <header>
       <meta charset="utf-8">
-	<title>Parallax Effect</title>
+	<title>Efecta Parallax</title>
     <link rel="stylesheet" href="css/style.css">
     <nav>
       <h1>INS TARADELL</h1>
